# finance-tools

./: .gitignore  README.md  build.sh  package.json  pyproject.toml  render.yaml  webpack.config.js
assets/: package.json
assets/bulma/: styles.scss
assets/sass/: styles.scss
assets/scripts/: charts.js  index.js
backtester/: backtest401k.py  backtest_controller.py  data_request.py  forms.py  strategies.py  twelvedata_requests.py  urls.py  views.py  viewtest.py
bulma/: package.json
calculator/: forms.py  urls.py  views.py
fintools/: manage.py  pyproject.toml  render.yaml  urls.py  wsgi.py
fintools/bulma/sass/: styles.scss
fintools/calculator/: admin.py  forms.py  models.py  urls.py  views.py
fintools/fintools/: asgi.py  settings.py  urls.py  views.py
fintools/fintools/settings/: dev.py  prod.py  settings.py
fintools/settings/: __init__.py  base_settings.py  dev.py  dev_settings.py  prod.py  prod_settings.py
fintools/static/css/: custom_styles.css  styles.css
fintools/static/js/: index.js
fintools/templates/: index.html  main.html  navbar.html
fintools/templates/calculator/: annuity_calculator.html  pmi_calculator.html
static/css/: custom_styles.css  styles.css
static/js/: navbar.js
templates/: index.html  main.html  navbar.html
templates/backtester/: backtester.html
templates/calculator/: annuity_calculator.html  pmi_calculator.html
