[tool.poetry]
name = "fintools"
version = "1.1.1"
description = "Finance tools"
authors = ["Jared Black <jaredblackjcb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
django = "4.1.2"
django-widget-tweaks = "1.4.12"
numpy = "1.23.4"
pandas = "1.5.0"
python-dateutil = "2.8.2"
pytz = "2022.4"
six = "1.16.0"
sqlparse = "0.4.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
setuptools = "^65.5.0"
requests = "^2.28.1"
backtrader = "^1.9.76"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
